# bm_temperature_monitor

./: Makefile  README.md
project/: main.c
project/app/: application.c  application.h  config_loader.c  config_loader.h  temp_monitor.c  temp_monitor.h
project/bsp/: isr.c  isr.h
project/common/: ringbuffer.c  ringbuffer.h
project/hal/: adc.c  adc.h  eeprom.c  eeprom.h  gpio.c  gpio.h  i2c.c  i2c.h
project/hal/hw/: adc.c  gpio.c  i2c.c
project/hal/mock/: adc.c  gpio.c  i2c.c
tests/: CMakeLists.txt  all_tests.c  mock_adc.c  mock_gpio.c  test_adc.c  test_adc_isr.cpp  test_application.cpp  test_config_loader.cpp  test_eeprom.c  test_gpio.c  test_ringbuffer.c  test_ringbuffer.cpp  test_temp_monitor.c  test_temp_monitor.cpp
